# bi_tools_docker

./: .gitignore  Makefile  README.md  docker-compose-install.sh  docker-compose.yml
jupyter/: Dockerfile  docker-compose.yml  pyproject.toml
jupyter/notebook/: sample_ssh_tunnel.py  sample_to_sql.py
mailhog/: auth.file
metabase/: docker-compose.yml
mysql/: docker-compose.yml
mysql/docker-entrypoint-initdb.d/: 001_create_database.sql
mysql/mysql.conf.d/: mysqld.cnf
