[tool.poetry]
name = "python"
version = "0.1.0"
description = "bi_tools_docker"
authors = ["MiuraKatsu@gmail.com"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.0.5"
numpy = "^1.18.0"
boto3 = "^1.14.19"
paramiko = "^2.7.1"
japanize-matplotlib = "^1.1.2"
openpyxl = "^3.0.4"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
pylint = "^2.5.3"
coverage = "^5.2"
tox = "^3.16.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
